<resources>
    <string name="app_name">FreeFrom</string>
    <string name="freefrom">FreeFrom..</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">Add Button</string>
    <string name="welcome">Welcome</string>
    <string name="addiction_is_not_a_battle_that_ends_in_a_day_it_s_a_journey_of_countless_small_victories_and_setbacks_where_healing_takes_time_and_strength_is_built_moment_by_moment">Addiction is not a battle that ends in a day; it\'s a journey of countless small victories and setbacks, where healing takes time, and strength is built moment by moment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="default_profile_picture">Default profile picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="addiction_name">Addiction name</string>
    <string name="start_date">Start Date</string>
    <string name="goals">Goals</string>
    <string name="back">Back</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="enter_a_new_password_below_to_change_your_password">Enter a new password below to change your password.</string>
    <string name="old_password">Old Password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="backButton">backButton</string>
    <string name="current_streak">Current Streak:</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="reset_time">RESET TIME</string>
    <string name="minutes">Minutes</string>
    <string name="past_streaks">Past Streaks</string>
    <string name="no_records_yet">no records yet</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="support">Support</string>
    <string name="emergency_assistance">Emergency Assistance</string>
    <string name="help_is_available">Help is available.</string>
    <string name="hopeline">HopeLine</string>
    <string name="national_mental_health">National Mental Health</string>
    <string name="national_mental_health_crisis_hotline_1">National Mental Health Crisis Hotline 1</string>
    <string name="mood_harmony">Mood Harmony</string>
    <string name="recovery_hub">Recovery Hub</string>
    <string name="national_mental_health_crisis_hotline_2">National Mental Health Crisis Hotline 2</string>
    <string name="dot">•</string>
    <string name="hello">Hello</string>
    <string name="enter_credentials">Enter Credentials</string>
    <string name="sign_in">SIGN IN</string>
    <string name="i_do_not_have_an_account_yet">I do not have an account yet.</string>
    <string name="create_account">Create Account</string>
    <string name="i_already_have_an_account">I already have an account.</string>
</resources>