<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context="fragments.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        tools:ignore="UselessParent">

        <!-- Back Button -->
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            android:layout_marginBottom="16dp" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_your_password"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_a_new_password_below_to_change_your_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:padding="25dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:text="@string/old_password"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:autofillHints="password"
                android:hint="@string/enter_your_old_password"
                android:textSize="16sp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn1"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:text="@string/new_password"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:autofillHints="password"
                android:hint="@string/enter_new_password"
                android:textSize="16sp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn1"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginTop="16dp"
                android:hint="@string/confirm_password"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:autofillHints="password"
                android:hint="@string/confirm_your_password"
                android:textSize="16sp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn1"
                android:inputType="textPassword" />


        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/changePasswordBtn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:text="@string/change_password"
                android:textStyle="bold"
                android:background="@drawable/btn1" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>