<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.SupportFragment">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/textSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:fontFamily="@font/bukhari_script"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <RelativeLayout
        android:id="@+id/textMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_assistance"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_is_available"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@id/textMain"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textHelp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/support_bg"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/hopeline"
                    android:src="@drawable/hope_line"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hopeline"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(02) 8804-4673"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/support_bg"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/national_mental_health"
                    android:src="@drawable/national_mental_health"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/national_mental_health_crisis_hotline_1"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(0966) 351-4518"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/support_bg"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/national_mental_health"
                    android:src="@drawable/national_mental_health"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/name3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/national_mental_health_crisis_hotline_2"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phone3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(0908) 639-2672"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/support_bg"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/mood_harmony"
                    android:src="@drawable/mood_harmony"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/name4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mood_harmony"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phone4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(02) 8844-2941"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/support_bg"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/hopeline"
                    android:src="@drawable/hope_line"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/name5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HopeLine (Globe)"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/phone5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(0917) 558-4673"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/support_bg"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/recovery_hub"
                    android:src="@drawable/recovery_hub"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/name6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovery_hub"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/phone6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(03) 2344-2142"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>